@@ -9,6 +9,7 @@ Improved menu environment:
 
 Added Z80 assembler
 Added TBBlue Tiles video mode
+Added TBBlue "reveal" setting to view which pixels use a layer
 Added setting to specify configuration file
 Added key to save text windows contents to a file
 Added setting to send a final space after every word in the osd adventure keyboard
